# arbos-revm

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
bins/revm-test/: Cargo.toml
bins/revme/: Cargo.toml
crates/precompile/: Cargo.toml
crates/primitives/: Cargo.toml
crates/revm/: Cargo.toml
crates/revm/src/: arbos.rs  evm.rs  lib.rs
crates/revm/src/arbos/: handler.rs  interpreter.rs
crates/revm/src/context/: inner_evm_context.rs
crates/revm/src/inspector/: handler_register.rs
src/: buffer.rs  builder.rs  config.rs  constants.rs  context.rs  evm.rs  frame.rs  handler.rs  inspector.rs  l1_fee.rs  lib.rs  local_context.rs  macros.rs  precompiles.rs  result.rs  spec.rs  stylus.rs  stylus_api.rs  stylus_executor.rs  transaction.rs  utils.rs
src/precompiles/: arb_address_table.rs  arb_aggregator.rs  arb_debug.rs  arb_gas_info.rs  arb_info.rs  arb_native_token_manager.rs  arb_owner.rs  arb_owner_public.rs  arb_retryable_tx.rs  arb_statistics.rs  arb_sys.rs  arb_wasm.rs  arb_wasm_cache.rs  mod.rs
src/state/: address_table.rs  arbos_state.rs  block_hashes.rs  l1_pricing.rs  l2_pricing.rs  mod.rs  program.rs  retryable.rs  types.rs
test-data/: account-info.wat  add.wat  bulk-memory-oob.wat  call.wat  create.wat  depth.wat  evm-data.wat  gas-info.wat  keccak.wat  log.wat  math.wat  memory.wat  memory2.wat  return-size.wat  revert.wat  start.wat  storage.wat  transient-storage.wat  write-args.wat  write-result-len.wat
test-data/exit-early/: exit-early.wat  panic-after-write.wat
tests/: account_info.rs  basic.rs  call.rs  create.rs  evm_data.rs  gas_info.rs  keccak.rs  logs.rs  math.rs  revert.rs  storage.rs  utils_sanity.rs
tests/test_utils/: mod.rs
