[package]
name = "arbos-revm"
description = "Arbitrum variant of Revm"
version = "1.0.0"
edition = "2021"

[lints.rustdoc]
all = "warn"

[dependencies]
revm = { version = "24.0.1", default-features = false, features = ["secp256r1"]}
serde = { version = "1.0", default-features = false, optional = true }
once_cell = { version = "1.19", default-features = false }

arbutil = { path = "../nitro/arbitrator/arbutil", default-features = false }
stylus = { path = "../nitro/arbitrator/stylus", default-features = false }
wasmer-types = { path = "../nitro/arbitrator/tools/wasmer/lib/types",  default-features = false }
lru = "0.14.0"
lazy_static = "1.5.0"

[dev-dependencies]
serde_json = { version = "1.0", default-features = false }