[package]
name = "arbos-revm"
description = "Arbitrum EVM implementation built on revm with Stylus/WebAssembly support"
version = "0.1.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/iosiro/arbos-revm"
readme = "README.md"
keywords = ["arbitrum", "evm", "revm", "stylus", "wasm"]
categories = ["cryptography::cryptocurrencies", "wasm"]

[lints.rustdoc]
all = "warn"

[dependencies]
auto_impl = "1"
revm = { version = "33.0.0", default-features = false, features = ["serde", "optional_eip3541"]}
serde = { version = "1.0", default-features = false, optional = true }
alloy-rlp = "0.3"
alloy-sol-types = "1.3.1"
lru = "0.16.3"
lazy_static = "1.5.0"
tracing = "0.1"
thiserror = "2"

# arbos
arbutil = { git = "https://github.com/iosiro/arbos-foundry-stylus", rev = "b58c678eaa0611b5593c9f9502e35a2e1aa45851", default-features = false }
stylus = { git = "https://github.com/iosiro/arbos-foundry-stylus", rev = "b58c678eaa0611b5593c9f9502e35a2e1aa45851", default-features = false, features = ["cc_brotli"] }
wasmer-types = { git = "https://github.com/iosiro/arbos-foundry-stylus", rev = "b58c678eaa0611b5593c9f9502e35a2e1aa45851", default-features = false }
wasmer = { git = "https://github.com/iosiro/arbos-foundry-stylus", rev = "b58c678eaa0611b5593c9f9502e35a2e1aa45851", default-features = false }

# wasm processing
wasm-encoder = "0.244.0"
wasmparser = "0.244.0"
wasmprinter = "0.244.0"

[dev-dependencies]
serde_json = { version = "1.0", default-features = false }
parking_lot = "0.12"
rand = "0.8"
eyre = "0.6"

[features]
serde = ["dep:serde"]
